--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,23 +1,27 @@
-image: Ubuntu1804
+image: Ubuntu1804  # образ для сборки
 
-stack: node 16
+stack: node 12  # окружение
+
 branches:
   only:
-    - main
+    - master  # ветка git
 
-# cache: node_modules
+cache: node_modules  # кеширование
 
 install:
-  - npm install
+  - yarn  # команда установки зависимостей
 
-build: off
+build: off  # отключаем встроенную в appveyor систему сборки
+
 build_script:
-  - npm run build
+  - yarn build   # команда сборки
+
 test_script:
-   - npm run lint # && npm test
-deploy_script: 
+  - yarn test --passWithNoTests # скрипт тестирования
+  
+deploy_script: # скрипт развёртывания
   - git config --global credential.helper store
   - git config --global user.name AppVeyor
   - git config --global user.email ci@appveyor.com
   - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
-  - npx push-dir --dir=dist --branch=gh-pages --force --verbose
+  - yarn run push-dir --dir=build --branch=gh-pages --force --verbose
